<resources>
    <string name="app_name">Mental Health App</string>
    <string name="open">Open navigation drawer</string>
    <string name="close">Close navigation drawer</string>
    <string name="coping_techniques">Coping Techniques</string>
    <string name="resources">Resources</string>
    <string name="profile">Profile</string>
    <string name="menu">Menu</string>
    <string name="survey_button">Take your daily survey</string>
    <string name="Filler_text">Filler text</string>
    <string name="data_tracking">Data Tracking</string>
    <string name="weekly_view">Weekly View</string>
    <string name="monthly_view">Monthly View</string>
    <string name="drawer_name">Navigation Drawer</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="logout">Logout</string>
    <string name="post_coping_technique">Share a coping technique that has helped you</string>
    <string name="self">Things that have helped you in the past: </string>
    <string name="others">Things that have helped others: </string>
    <string name="journals">Journals</string>
    <string name="new_entry">New Entry</string>
    <string name="past_entries">Past Entries</string>
    <string name="this_weeks_journal">This week\'s journal entries: </string>
    <string name="national_suicide_hotline">National Suicide Hotline</string>
    <string name="crisis_text_line">Crisis Text Line</string>
    <string name="veteran_crisis_line">Veteran\'s Crisis Line</string>
    <string name="local_resource_locator">Local Resource Locator</string>
</resources>