<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/master_constraint">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/screen_title"
            android:text="@string/data_tracking"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <Button
            android:id="@+id/weekly_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weekly_view"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/screen_title"
            app:layout_constraintVertical_bias="0.05"/>

        <Button
            android:id="@+id/monthly_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/monthly_view"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.9"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/screen_title"
            app:layout_constraintVertical_bias="0.05"/>

        <HorizontalScrollView
            android:id="@+id/score_graph"
            android:layout_width="363dp"
            android:layout_height="200dp"
            android:background="@color/purple_200"
            android:fillViewport="true"
            app:layout_anchor="@+id/master_constraint"
            app:layout_anchorGravity="center"
            app:layout_constraintWidth_percent="0.9"
            app:layout_constraintVertical_bias="0.1"
            app:layout_constraintTop_toBottomOf="@+id/weekly_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/my_readable_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Filler_text"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"
                    android:lineSpacingExtra="4dp" />
            </LinearLayout>
        </HorizontalScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>