<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/master_constraint">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/screen_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:title="@string/journals"
                app:titleTextColor="@android:color/white"/>

        </com.google.android.material.appbar.AppBarLayout>

        <Button
            android:id="@+id/new_entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_entry"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/screen_title"
            app:layout_constraintBottom_toTopOf="@id/journal_entries"
            app:layout_constraintVertical_bias="0.05"/>

        <Button
            android:id="@+id/past_entries"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/past_entries"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.9"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/screen_title"
            app:layout_constraintBottom_toTopOf="@id/journal_entries"
            app:layout_constraintVertical_bias="0.05"/>

        <HorizontalScrollView
            android:id="@+id/journal_entries"
            android:layout_width="363dp"
            android:layout_height="400dp"
            android:background="@color/purple_200"
            android:fillViewport="true"
            app:layout_anchor="@+id/master_constraint"
            app:layout_anchorGravity="center"
            app:layout_constraintWidth_percent="0.9"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/journal_filler_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/this_weeks_journal"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"
                    android:lineSpacingExtra="4dp" />
            </LinearLayout>
        </HorizontalScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>